# Hydra_exp

./: .gitignore  README.md  hydra_realsense.launch
hydra/: README.md
hydra_ros/hydra_ros/: CMakeLists.txt
kimera_vio/tests/: testTracker.cpp
kimera_vio_ros/: CMakeLists.txt
kimera_vio_ros/launch/: kimera_vio_d435i.launch  kimera_vio_d455.launch
phy_graph/: BUGFIX_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  RGB_IMAGE_UPGRADE.md  USAGE_EXAMPLES.md  package.xml  setup.py
phy_graph/config/: uhuman2.yaml
phy_graph/include/phy_graph/: physical_inference_node.h
phy_graph/launch/: dataset.launch  inference.launch  isaacsim.launch
phy_graph/scripts/: module.py
phy_graph/src/: graphGen.cpp  imageProcessor.cpp  nodeSub.cpp
phy_graph/src/phy_graph_lib/: inferenceCore.py
phy_graph/srv/: GetProperties.srv
phy_graph/test/: test_api_debug.py  test_json_output.py
physical_inference/: CMakeLists.txt  package.xml  setup.py
physical_inference/config/: ade20k.yaml
physical_inference/launch/: dataset.launch  inference.launch
physical_inference/scripts/: module.py
physical_inference/src/: nodeSub.cpp
physical_inference/srv/: GetProperties.srv
physical_inference/test/: test_api_debug.py
semantic_inference/: README.md  test_mask2former_onnx.py
semantic_inference/exporting/: README.md  export_mask2former_custom.py
semantic_inference/semantic_inference/: CLAUDE.md
semantic_inference/training/: ade20k.yaml  ade20k_annotated.yaml  auto_annotate.py  train_sam.py
src/backend/: update_rooms_functor.cpp
(+83 files in other folders)
